trunk/Archive2/eb/b448ab03021d9c/output
main.cpp: In function 'int main()':
main.cpp:11:5: error: 'array' was not declared in this scope
     array<int, 5> a = {1, 2, 3, 4, 5}; // c++ statically array
     ^
main.cpp:11:5: note: suggested alternative:
In file included from main.cpp:4:0:
/usr/local/include/c++/5.1.0/array:81:12: note:   'std::array'
     struct array
            ^
main.cpp:11:11: error: expected primary-expression before 'int'
     array<int, 5> a = {1, 2, 3, 4, 5}; // c++ statically array
           ^
main.cpp:13:21: error: 'a' was not declared in this scope
     for (int item : a)
                     ^
main.cpp:15:9: error: 'cout' was not declared in this scope
         cout << item << endl;
         ^
main.cpp:15:9: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/local/include/c++/5.1.0/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:15:25: error: 'endl' was not declared in this scope
         cout << item << endl;
                         ^
main.cpp:15:25: note: suggested alternative:
In file included from /usr/local/include/c++/5.1.0/iostream:39:0,
                 from main.cpp:1:
/usr/local/include/c++/5.1.0/ostream:590:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
